--- a/financialapp/frontend/public/index.html
+++ b/financialapp/frontend/public/index.html
@@ -9,6 +9,24 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    
+<!-- MDB -->
+<!-- Font Awesome -->
+<script type='text/javascript' src='https://cdn.yodlee.com/fastlink/v4/initialize.js'></script>
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+  rel="stylesheet"
+/>
+<!-- Google Fonts -->
+<link
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+  rel="stylesheet"
+/>
+<!-- MDB -->
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.3.2/mdb.min.css"
+  rel="stylesheet"
+/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +42,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Finwise</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
